--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -25,7 +25,7 @@
   font-weight: bold;
 }
 
-.loginForm input[type="text"],
+.loginForm input[type="email"],
 .loginForm input[type="password"] {
   box-sizing: border-box;
   width: 100%;
